k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-svc
  namespace: devops-demo
spec:
  selector:
    app: devops-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
